# api/src/routes/authRoute.js
@@ -1,17 +1,8 @@
-const validation = require('../middlewares/validationMiddleware.js');
-const authSchemas = require('../schemas/authSchema.js');
+const validation = require('../middlewares/validationMiddleware');
+const authSchemas = require('../schemas/authSchema');
+const authSwagger = require('../swaggers/authSwagger');
 
 module.exports = (app) => {
 	const { controllers: { authController } } = app;
-	app.post('/auth', (req, res, next) => {
-		/* #swagger.parameters['obj'] = {
-			in: 'body',
-			description: 'Authentication',
-			schema: {
-				$user: 'rafaelfquadros',
-				$password: 'testedesenha',
-			}
-		} */
-		next();
-	}, validation(authSchemas.authentication), authController.authUser);
+	app.post('/auth', authSwagger.auth(), validation(authSchemas.authentication), authController.authUser);
 };
